[package]
name = "examples"
version = "0.1.0"
authors = ["mechiru <u9053u6d41@gmail.com>"]
edition = "2021"

[dependencies]
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
google-authz = { version = "1.0.0-alpha.5", features = ["tonic"] }
# grpc + gcp
tonic = { version = "0.9.2", features = ["tls", "tls-webpki-roots"] }
prost = "0.11.9"
prost-types = "0.11.9"

[dependencies.'google-api-proto']
path = "../google-api-proto"
features = [
  "google-pubsub-v1",
  "google-spanner-admin-database-v1"
]

[[bin]]
name = "pubsub"
path = "src/pubsub.rs"

[[bin]]
name = "spanner"
path = "src/spanner.rs"
